@startuml
'https://plantuml.com/class-diagram

abstract class Game {

    + {final} action():void
    # {abstract} gameCreateEnemy()
    # bulletsMoveAction()
    # aircraftsMoveAction()
    # crashCheckAction()
    # postProcessAction()
    + repaint()
    + checkHeroAircraftAlive()
    # {abstract} difficultyIncreasesWithTime()
}

class EasyGame {
    # initDifficultyParameters():void
    # gameCreateEnemy():void
    # difficultyIncreasesWithTime():void
}

class NormalGame {
    # initDifficultyParameters():void
    # gameCreateEnemy():void
    # difficultyIncreasesWithTime():void
}

class HardGame {
    # initDifficultyParameters():void
    # gameCreateEnemy():void
    # difficultyIncreasesWithTime():void
}

Game <|-- EasyGame
Game <|-- NormalGame
Game <|-- HardGame

@enduml